Let users select participants videos to process - currently failing silently when directory unavailable

--- a/www/data/src/webgazerExtractClient.css
+++ b/www/data/src/webgazerExtractClient.css
@@ -31,3 +31,10 @@
     left: 0px;
     z-index: 8;
 }
+#participants {
+    position: absolute;
+    top: 550px;
+    left: 500px;
+    width: 50%;
+    z-index: 8;
+}
